# EPQ

./: CMakeLists.txt
src/: Primitives.cpp  Primitives.h  Scene.cpp  Scene.h  geometry.cpp  geometry.h  imageio.h  main.cpp
src/cameras/: camera.cpp  camera.h  orthographicCamera.cpp  orthographicCamera.h
src/geometricOperations/: transformations.h
src/integrators/: integrator.cpp  integrator.h  testIntegerator.cpp
src/samplers/: sampler.cpp  sampler.h  stratifiedSampler.cpp  stratifiedSampler.h
src/utility/: RNG.cpp  RNG.h
